# twinStick

./: .gitmodules  LICENSE  README.md  structure.txt
docs/: architecture.md  button_mapping.md
firmware/hydra-core-esp32/: ESP-IDF.md  README.md
firmware/hydra-core-esp32/hydra_core/: hydra_core.ino
firmware/nexus-ui-rp2040/: CMakeLists.txt  README.md  structure.txt
firmware/nexus-ui-rp2040/src/: board_config.h  main.c
hardware/: readme.md
logs/260314/: readme.md
logs/260318/: readme.md
protocol/arcade-link/: specification.md
refs/: readme.md
